msrle: fix extradata palette handling

Fixes Ticket1273

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>